alignment in card corrected

--- a/app/assets/stylesheets/pages/_accommodations-index.scss
+++ b/app/assets/stylesheets/pages/_accommodations-index.scss
@@ -23,6 +23,21 @@
   background-position: center;
 }
 
+.index-name {
+  height: 34px;
+}
+.index-date {
+  height: 15px;
+}
+.index-address {
+  height: 15px;
+}
+
+.index-content {
+  display: block;
+  width: 240px;
+}
+
 
 // .index-card {
 //   background-color: $white-middle-transparent;
