--- a/app/assets/stylesheets/pages/_restaurants-index.scss
+++ b/app/assets/stylesheets/pages/_restaurants-index.scss
@@ -48,6 +48,15 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
   }
+  .index-name {
+    height: 34px;
+  }
+  .index-date {
+    height: 15px;
+  }
+  .index-address {
+    height: 15px;
+  }
   .index-participants {
     position: absolute;
     top: 5px;
@@ -67,9 +76,9 @@
     margin-left: 5px;
   }
 }
-
 .index-content {
   display: block;
+  width: 240px;
 }
 
 .ind-name {
@@ -82,7 +91,7 @@
   .ind-date {
     font-size: 14px;
   }
-  }
+}
 .index-address {
   margin-top: 30px;
   .ind-address {
